--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "animate.css": "latest",
     "angular": "latest",
     "angular-route": "latest",
-    "angular-nvd3": "~1.0.2"
+    "angular-nvd3": "~1.0.2",
+    "angular-chart.js": "~0.8.5"
   },
   "resolutions": {
     "angular": "1.4.7"
