--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-performance-tracker",
   "main": "server.js",
   "dependencies": {
+    "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
